# Telegram-Account-Switcher

./: Changelog  README.md  README_EN.md  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: Build & Release.yml  Build & Release.yml.yml  Nuitka Auto Build & Release.yml.yml
src/: __init__.py  main.py  settings.ui
src/modules/: __init__.py  aes_crypto.py  config_manager.py  exceptions.py  logger.py  process_manager.py  utils.py
src/modules/account/: AccountSwitcher.py  account_operations.py
src/ui/: __init__.py  help.ui  help_ui.py  settings.py  settings.ui  settings_ui.py  ui_help.py  ui_settings.py
src/utils/: __init__.py  config_manage.py  exceptions.py  files_utils.py  logger.py  process_utils.py  system.py  system_utils.py  tdata_process.py
