[project]
name = "telegram-account-switcher"
version = "1.3.0"
description = "Telegram Account Switcher Project!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "loguru>=0.7.3",
    "psutil>=7.2.1",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.10",
]
